--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,3 +2,5 @@
         <h1>
             codiel/userProfile
         </h1>
+    <p> Name : <%= user.name %></p>
+    <p> Email: <%= user.email %></p>
