--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/layout.css"> 
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
+
         <!-- as the root directory assts is already mentioned in index.js wahan se relative addrss -->
         <%- style %>
         <!-- if a style tag is passed in body it comes here-->
