--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,6 @@
+<link rel="stylesheet" href="/css/home.css">
 
-<h1>
-    Codeial / <%= title %>
-</h1>
-
-
+<div id="home-container">
 <section id="feed-posts">
     <h4>Posts</h4>
     <% if(locals.user){ %>
@@ -15,37 +12,22 @@
     <div id = "posts-container">
         <ul>
             <% for (post of posts){ %>
-            <li>
-                <p>
-                <%= post.content %> <br>
-                <small>
-                    <%= post.user.name %>
-                </small>
-                </p>
-                <div class="post-comments">
-                    <% if (locals.user){ %>
-                         <form action = "/comments/create" method="POST">
-                            <input type="text" name="content" placeholder="type here to add comment.." required>
-                            <input type="hidden" name="post" value="<%= post._id %>">
-                            <input type="submit" value="Add Comment">
-                         </form>
-                    <% } %>   
-                    <div class="post-comments-list">
-                        <ul id = "post-comments-<%= post._id %>">
-                            <% for (comment of post.comments){ %>
-                                <p>
-                                    <%= comment.content %>
-                                    <br>
-                                    <small>
-                                        <%= comment.user.name %>
-                                    </small>
-                                </p>
-                            <% } %>
-                        </ul>
-                    </div> 
-                </div>
-            </li>
+            
+                <%- include('_posts') -%>
+
             <%} %>
         </ul>
     </div>
 </section>
+ 
+<section id="user-friends">
+    <h4>Friends</h4>
+    <% for(u of all_users) {%>
+        <p>
+            <a href="/users/profile/<%= u.id %>">
+                <%= u.name %>
+            </a>
+        </p>
+    <% } %>
+</section>
+</div>
